css/styles.css
@import "./nav.css";
@font-face {
    font-family: 'Futura Std';
    font-weight: normal;
    src: url('../fonts/futura/FuturaStd-Book.otf');
}
@font-face {
    font-family: 'FuturaStd-Heavy';
    font-weight: bold;
    src: url('../fonts/futura/FuturaStd-Heavy.otf');
}
body {
    overflow-x: hidden;
    font-family: 'Futura Std';
}
#main {
    overflow: hidden;
    width: 100%;
    font-size: 23px;
}
section {
    position: relative;
    width: 100vw;
}
section:first-child, #main > div:first-of-type {
    margin-top: 75px;
    height: 130vh;
    width: 100%;
    margin-bottom: calc(10.4vh + 100px);
}
section:nth-of-type(3) {
    background-color: #2C2219;
    margin-top: -15px;
    position: relative;
    z-index: 5;
}
#main > div:first-of-type {
    position: absolute;
    top: 0;
}
section:nth-of-type(2) {
    height: 150vh;
    max-height: 140vw;
    display: flex;
    justify-content: center;
    margin-bottom: -10px;
}
footer {
    padding-left: 50px !important;
    padding-right: 50px !important;
    color: white;
    z-index: 10;
}
footer img {
    margin-top: 20px;
    margin-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
    height: auto;
}
.sponsor-heading {
  color: #95a3a6;
  margin-top: 50px;
  margin-left: 50px;
}
#apply-button {
    display: none;
    background: linear-gradient(to right, #494a86, #244a53);
    border-bottom: 3px solid #3245F0;
    border-right: 6px solid #3245F0;
    border-top: none;
    border-left: none;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 1.52em;
    font-family: 'FuturaStd-Heavy';
}
#apply-button:hover {
    cursor: pointer;
}
#apply-button > a {
    color: white;
    text-decoration: none;
}
#about-text {
  position: absolute;
  z-index: 7;
  bottom: -8%;
  margin-bottom: -100px;
  height: 26vw;
  color: white;
  width: 100%;
  font-size: inherit;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#about-text h1 {
  font-size: 1.52em;
}
h1 {
    font-family: 'FuturaStd-Heavy';
}
#about-text p {
  font-size: 1em;
  padding-right: 100px;
  padding-left: 50px;
}
#about-text > .row {
    display: flex;
    align-items: center;
    justify-content: center;
}
.img-absolute {
    position: absolute;
}
object[data="img/clouds.svg"] {
    width:60%;
    height: 30%;
    min-width: 700px;
    margin-top: -35px;
}
img[src="img/logowhitewebsite.png"] {
    width:20vw;
    height: auto;
    min-width: 200px;
    left: 50%;
    margin-left: -10vw;
    top: 25%;
    margin-top: -10vw;
    z-index: 4;
}
@media (max-width: 1000px) {
    img[src="img/logowhitewebsite.png"] {
        margin-left: -100px;
        margin-top: -100px;
    }
}
object[data="img/backgroundsky.svg"] {
    width: 100%;
    height: 80%;
    margin-top: -32vh;
}
object[data="img/roadcowshills.svg"] {
    top: 5%;
    height: 60%;
    min-width: 900px;
    margin-left: -5px;
    width: calc(100% + 5px);
}
object[data="img/cowandsquirrel.svg"] {
    width: calc(100% + 5px);
    height: auto;
    bottom: -8%;
    margin-left: -5px;
    z-index:5;
}
object[data="img/grass.svg"] {
    width: 100%;
    height: 30%;
    bottom: 0;
    z-index:5;
}
object[data="img/mountains top.svg"] {
    top: 0;
    width: 100%;
    height: 60%;
    min-width: 1200px;
}
object[data="img/soil.svg"] {
    z-index: 7;
    margin-top: -20px;
    margin-bottom: -30px;
    margin-left: -5px;
    width: calc(100% + 5px);
    height: 25vw;
    position: relative;
}
object[data="img/middle cave.svg"] {
    z-index: 6;
    margin-left: -10px;
    margin-top: -10px;
    width: calc(100% + 20px);
    height: 100%;
}
.caveBackground {
    z-index: 3;
    width: 100%;
    top: 30%;
    height: 80%;
}
object[data="img/cavelayer2.svg"] {
    z-index: 4;
}
object[data="img/cavelayer3.svg"] {
    z-index: 3;
}
object[data="img/cavelayer4.svg"] {
    z-index: 2;
}
object[data="img/schedule.svg"] {
    z-index: 6;
    margin-top: 20px;
    margin-left: 15px;
    margin-right: 15px;
    height: 35%;
    max-width: 100%;
}
#lantern-img {
    z-index: 5;
}
#lantern, #lantern-img {
    width: 15%;
    right: 30%;
    margin-right: -10%;
    top: 25%;
    position: absolute;
}
#lantern:hover {
    cursor: pointer;
}
#lantern {
    z-index: 6;
    height: 50%;
}

#schedule {
  color: white;
  z-index: 8;
  margin-top: -2.5vw;
}
#FAQ {
  color: white;
  font-family: 'Futura-Std';
  z-index: 4;
}
#FAQ h1 {
  text-align: center;
  font-size: 33px;
}
#FAQ h2 {
  font-size: 25px;
  font-family: 'FuturaStd-Heavy';
  margin-left: 70px;
}
#FAQ p {
  font-size: 18px;
  margin: 20px 50px 20px 70px;
}
#FAQ a {
  text-decoration: none;
  color: #1287A8;
}
#FAQ a:hover {
  opacity: 0.75;
}

